--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Foodies</title>
   </head>
-  <body class="font-main max-w-screen-2xl mx-auto">
+  <body class="font-main max-w-screen-2xl mx-auto text-[#2D2D2D]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
